--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
   <meta charset="UTF-8">
   <title>Welcome</title>
+  <style>
+    body {
+      text-align: center;
+    }
+    h1 {
+      transform: translateY(50px);
+      font-family: arial;
+    }
+    h3 {
+      transform: translateY(60px);
+      font-family: arial;
+      text-decoration: none;
+    }
+    p {
+      transform: translateY(70px);
+      font-family: arial;
+      text-decoration: none;
+    }
+    a {
+      transform: translateY(60px);
+      font-family: arial;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>Welcome to Our Project</h1>
-  <p><a href="./Files/">Open Files Directory</a></p>
+  <h3><a href="./Files/">Open Files Directory</a></h3>
+  <p>Made by Danykas and Axqzme</p>
 </body>
 </html>
