--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
   </style>
 </head>
 <body>
-  <h1>Welcome to Our Project</h1>
+  <h1>Welcome to Our Project "Multitool website"</h1>
   <h3><a href="./Files/">Open Files Directory</a></h3>
-  <p>Made by Danykas and Axqzme</p><br>
+  <p>Made by Danykas and Axqzme ONLY USE FOR EDUCATIONAL PURPOSES the files have .bat files or game cheats use with caution</p><br>
   <p>Multitool website Want to upload a file reach us at <a href="mailto:parko20a@gmail.com">parko20a@gmail.com</a></p>
 </body>
 </html>
