--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.95);
-      backdrop-filter: blur(10px);
-      border-radius: 20px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(10px);
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  color: white;
       padding: 3rem 2rem;
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
       max-width: 600px;
