--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
       overflow-x: hidden;
     }
 
-    .container {
-  background: rgba(255, 255, 255, 0.1);
-  backdrop-filter: blur(10px);
-  border-radius: 15px;
-  border: 1px solid rgba(255, 255, 255, 0.2);
-  color: white;
-      padding: 3rem 2rem;
-      box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-      max-width: 600px;
-      width: 90%;
-      text-align: center;
-      position: relative;
-      animation: slideUp 0.8s ease-out;
-    }
+.container {
+  background: rgba(255, 255, 255, 0.16); /* slightly more glass-like */
+  backdrop-filter: blur(24px) saturate(180%);
+  -webkit-backdrop-filter: blur(24px) saturate(180%);
+  border-radius: 18px;
+  border: 1.5px solid rgba(255,255,255,0.35);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.17);
+  color: #fff;
+  padding: 3rem 2rem;
+  max-width: 600px;
+  width: 90%;
+  text-align: center;
+  position: relative;
+  animation: slideUp 0.8s ease-out;
+  overflow: hidden;
+}
 
     @keyframes slideUp {
       from {
@@ -47,6 +49,20 @@
         transform: translateY(0);
       }
     }
+    .container::before {
+  content: "";
+  position: absolute;
+  top: 0; left: 0; right: 0; bottom: 0;
+  border-radius: inherit;
+  pointer-events: none;
+  background: linear-gradient(135deg, rgba(255,255,255,0.35) 0%, rgba(255,255,255,0.05) 100%);
+  opacity: 0.75;
+  z-index: 1;
+}
+.container > * {
+  position: relative;
+  z-index: 2;
+}
 
     .header {
       margin-bottom: 2rem;
