--- a/Files/Useful code/Test code/Glowing button.html
+++ b/Files/Useful code/Test code/Glowing button.html
@@ -4,7 +4,19 @@
   <meta charset="UTF-8">
   <title>GlowingButton.css Preview</title>
   <style>
-    /* Paste the content of GlowingButton.css here */
+    .glow-button {
+  padding: 10px 20px;
+  font-size: 1.2rem;
+  color: white;
+  background-color: #111;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 0 10px #0ff, 0 0 40px #0ff, 0 0 80px #0ff;
+  transition: 0.3s ease-in-out;
+}
+.glow-button:hover {
+  box-shadow: 0 0 20px #0ff, 0 0 60px #0ff, 0 0 100px #0ff;
+}
   </style>
 </head>
 <body>
