--- a/Files/Useful code/Test code/Check if element is in viewport.html
+++ b/Files/Useful code/Test code/Check if element is in viewport.html
@@ -10,7 +10,21 @@
 <body>
   <h2>Check if Element is in Viewport.js</h2>
   <pre><code>
-// Paste the content of Check if Element is in Viewport.js here
+    function isInViewport(element) {
+  const rect = element.getBoundingClientRect();
+  return (
+    rect.top >= 0 &&
+    rect.left >= 0 &&
+    rect.bottom <= window.innerHeight &&
+    rect.right <= window.innerWidth
+  );
+}
+
+// Example:
+const myElement = document.getElementById('myDiv');
+if (isInViewport(myElement)) {
+  console.log('Element is in view!');
+}
   </code></pre>
 </body>
 </html>
