Update Rainbow gradient text.css Preview.html

--- a/Files/Useful code/Test code/Rainbow gradient text.css Preview.html
+++ b/Files/Useful code/Test code/Rainbow gradient text.css Preview.html
@@ -14,6 +14,6 @@
 </head>
 <body>
   <h2>Rainbow Gradient Text CSS Preview</h2>
-  <div class="rainbow-text" style="font-size:2em;">Sample Rainbow Text</div>
+  <div class="rainbow-text" style="font-size:2em;">Sample Rainbow Text Sample Rainbow Text Sample Rainbow Text Sample Rainbow Text Sample Rainbow Text Sample Rainbow Text Sample Rainbow Text Sample Rainbow Text</div>
 </body>
 </html>
